--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -88,6 +88,9 @@
             android:name="id"
             app:argType="integer"
             android:defaultValue="0" />
+        <action
+            android:id="@+id/action_foodDetailFragment_to_mapFragment"
+            app:destination="@id/mapFragment" />
     </fragment>
     <fragment
         android:id="@+id/addFoodFragment"
@@ -139,6 +142,26 @@
             app:popUpTo="@id/main_navigation"
             app:launchSingleTop="true"
             app:popUpToInclusive="true"/>
+    </fragment>
+    <fragment
+        android:id="@+id/mapFragment"
+        android:name="com.bintangpoetra.sumbanginaja.presentation.map.MapFragment"
+        android:label="MapFragment" >
+        <argument
+            android:name="latitude"
+            app:argType="float"
+            android:defaultValue="0.0" />
+        <argument
+            android:name="longitude"
+            app:argType="float"
+            android:defaultValue="0.0" />
+        <argument
+            android:name="name"
+            app:argType="string" />
+        <argument
+            android:name="tag"
+            app:argType="string"
+            android:defaultValue="0" />
     </fragment>
 
 </navigation>
